tests/success/comptime/bool_short_circuit_lifetime.bz
function test()
{
	(consteval {
		let i = 0;
		i == 1 || i == 0
	});
	(consteval {
		let i = 0;
		i == 0 && i == 1
	});
}
