tests/error/comptime/check_slice_construction05.bz
function test()
{
	(consteval {
		let i = 0;
		const p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, 0);

		__builtin_slice_from_ptrs(&i, p);
	});
}
